Add dereference query param to API interface.
