# common/src/main/java/io/apicurio/registry/rest/v2/IdsResource.java
@@ -4,6 +4,7 @@ import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Response;
 
 /**
@@ -25,7 +26,8 @@ public interface IdsResource {
   @Path("/contentIds/{contentId}/")
   @GET
   @Produces("*/*")
-  Response getContentById(@PathParam("contentId") int contentId);
+  Response getContentById(@PathParam("contentId") int contentId,
+      @QueryParam("dereference") Object dereference);
 
   /**
    * Gets the content for an artifact version in the registry using its globally unique
@@ -40,7 +42,8 @@ public interface IdsResource {
   @Path("/globalIds/{globalId}")
   @GET
   @Produces("*/*")
-  Response getContentByGlobalId(@PathParam("globalId") int globalId);
+  Response getContentByGlobalId(@PathParam("globalId") int globalId,
+      @QueryParam("dereference") Object dereference);
 
   /**
    * Gets the content for an artifact version in the registry using the 
@@ -56,5 +59,6 @@ public interface IdsResource {
   @Path("/contentHashes/{contentHash}/")
   @GET
   @Produces("*/*")
-  Response getContentByHash(@PathParam("contentHash") String contentHash);
+  Response getContentByHash(@PathParam("contentHash") String contentHash,
+      @QueryParam("dereference") Object dereference);
 }
