# common/src/main/resources/META-INF/openapi.json
@@ -21,6 +21,16 @@
                 "tags": [
                     "Artifacts"
                 ],
+                "parameters": [
+                    {
+                        "name": "dereference",
+                        "description": "Allows the user to specify if the content should be dereferenced when being returned",
+                        "schema": {
+
+                        },
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "$ref": "#/components/responses/ArtifactContent"
@@ -55,6 +65,16 @@
                 "tags": [
                     "Artifacts"
                 ],
+                "parameters": [
+                    {
+                        "name": "dereference",
+                        "description": "Allows the user to specify if the content should be dereferenced when being returned",
+                        "schema": {
+
+                        },
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "$ref": "#/components/responses/ArtifactContent"
@@ -88,6 +108,16 @@
             "get": {
                 "tags": [
                     "Artifacts"
+                ],
+                "parameters": [
+                    {
+                        "name": "dereference",
+                        "description": "Allows the user to specify if the content should be dereferenced when being returned",
+                        "schema": {
+
+                        },
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -1065,6 +1095,16 @@
                 "tags": [
                     "Versions"
                 ],
+                "parameters": [
+                    {
+                        "name": "dereference",
+                        "description": "Allows the user to specify if the content should be dereferenced when being returned",
+                        "schema": {
+                            "type": "boolean"
+                        },
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "404": {
                         "$ref": "#/components/responses/NotFound"
@@ -1712,6 +1752,17 @@
             "get": {
                 "tags": [
                     "Artifacts"
+                ],
+                "parameters": [
+                    {
+                        "name": "dereference",
+                        "description": "Allows the user to specify if the content should be dereferenced when being returned",
+                        "schema": {
+                            "type": "boolean"
+                        },
+                        "in": "query",
+                        "required": false
+                    }
                 ],
                 "responses": {
                     "200": {
